third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul_assign/unit_struct.rs
#[derive(derive_more::MulAssign)]
struct Foo;

#[derive(derive_more::MulAssign)]
#[mul_assign(forward)]
struct Bar;

fn main() {}
